infra/k8s/client-depl.yml
# Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: stephenmontague/client
---
# Service Configuration
apiVersion: v1
kind: Service
metadata:
    name: client-srv
spec:
    type: ClusterIP # Kubernetes defaults to this so it is not necessary to include
    selector:
        app: client
    ports:
        - name: client
          protocol: TCP
          port: 4001
          targetPort: 4001
